<resources>
    <string name="app_name">GoodFood</string>
    <string name="dummy_news_details">Facebook က႑အေပၚမူတည္ၿပီး လူငယ္မ်ား၏ အသက္ဆံုး႐ံႈးမႈျဖစ္ေပၚေနသျဖင့္ လူငယ္မူ၀ါဒကို သေဘာတူလက္ခံ၍ Action Plan ေရးဆြဲရာ၌ Traditional Challenge အေပၚ ထည့္သြင္းေရးဆြဲသြားရန္ လိုအပ္သည္ဟု ႏိုင္ငံေတာ္၏ အတိုင္ပင္ခံပုဂၢိဳလ္ မွာၾကားထားေၾကာင္း ျပန္ၾကားေရး၀န္ႀကီးဌာန၏ သတင္းထုတ္ျပန္ခ်က္အရသိရၿပီး လူငယ္ဘက္စံုဖြံ႕ၿဖဳိးေရးပြဲေတာ္ က်င္းပေရးအတြက္ တတိယအႀကိမ္ ညႇိႏႈိင္းအစည္းအေ၀းသို႔ တက္ေရာက္လာသည့္ ျပည္ေထာင္စု၀န္ႀကီးမ်ားက ႏိုင္ငံေတာ္၏ အတိုင္ပင္ခံပုဂၢိဳလ္က ယင္းကဲ့သို႔မွာၾကားထားေၾကာင္း         ထည့္သြင္းေဆြးေႏြးခဲ့ျခင္းျဖစ္သည္။         အဆိုပါအစည္းအေ၀းကို ႏို၀င္ဘာ ၇ ရက္တြင္         ေနျပည္ေတာ္ရွိ ျပန္ၾကားေရး၀န္ႀကီးဌာန အစည္းအေ၀းခန္းမ၌         ျပဳလုပ္ခဲ့ျခင္းျဖစ္ၿပီး ျပည္ေထာင္စု၀န္ႀကီး ေဒါက္တာေဖျမ         င့္၊ ေဒါက္တာမ်ဳိးသိမ္းႀကီး၊ ေဒါက္တာျမင့္ေထြးႏွင့္         ေဒါက္တာ၀င္းျမတ္ေအးတို႔ တက္ေရာက္ခဲ့ကာ ႏုိင္ငံေတာ္         ၏ အတုိင္ပင္ခံပုဂၢိဳလ္က လူငယ္မူ၀ါဒကို သေဘာတူလက္ခံ၍ A         ction Plan ေရးဆြဲရာ၌ Traditional Challenge အေပၚ ထည့္သြင         ္းေရးဆြဲသြားရန္ လိုအပ္သည္ကို မွာၾကားထားေၾကာင္း၊         Traditional Challenge ဆိုသည္မွာ မီဒီယာႏွင့္ Facebook က႑ျဖ         စ္ၿပီး Facebook က႑အေပၚမူတည္ၿပီး လူငယ္မ်ား၏အသက္ဆံုး႐ံႈးမႈမ         ်ား ျဖစ္ေပၚေနသျဖင့္ အဆိုပါစိန္ေခၚမႈမ်ားသည္ အေရးႀကီးသ         ည့္အတြက္ လူငယ္မူ၀ါဒဆိုင္ရာ Action Plan ေရးဆြဲရာ၌ မည္         သို႔ကိုင္တြယ္ေျဖရွင္းရမည္၊ မည္သို႔တားဆီးကာကြယ္ရမည္က         ို ထည့္သြင္းေရးဆြဲသြားရန္ လိုအပ္ေၾကာင္း စသည့္အခ်က         ္မ်ားကို ထည့္သြင္းေဆြးေႏြးခဲ့သည္ဟု သတင္းထုတ္ျပန         ္ခ်က္အရ သိရသည္။     ေနျပည္ေတာ္ရွိ ျပန္ၾကားေရး၀န္ႀကီးဌာန အစည္းအေ၀းခန္းမ၌         ျပဳလုပ္ခဲ့ျခင္းျဖစ္ၿပီး ျပည္ေထာင္စု၀န္ႀကီး ေဒါက္တာေဖျမ         င့္၊ ေဒါက္တာမ်ဳိးသိမ္းႀကီး၊ ေဒါက္တာျမင့္ေထြးႏွင့္         ေဒါက္တာ၀င္းျမတ္ေအးတို႔ တက္ေရာက္ခဲ့ကာ ႏုိင္ငံေတာ္         ၏ အတုိင္ပင္ခံပုဂၢိဳလ္က လူငယ္မူ၀ါဒကို သေဘာတူလက္ခံ၍ A         ction Plan ေရးဆြဲရာ၌ Traditi         စ္ၿပီး Facebook က႑အေပၚမူတည္ၿပီး လူငယ္မ်ား၏အသက္ဆံုး႐ံႈးမႈမ         ်ား ျဖစ္ေပၚေနသျဖင့္ အဆိုပါစိန္ေခၚမႈမ်ားသည္ အေရးႀကီးသ         ည့္အတြက္ လူငယ္မူ၀ါဒဆိုင္ရာ Action Plan ေရးဆြဲရာ၌ မည္         သို႔ကိုင္တြယ္ေျဖရွင္းရမည္၊ မည္သို႔တားဆီးကာကြယ္ရမည္က         ို ထည့္သြင္းေရးဆြဲသြားရန္ လိုအပ္ေၾကာင္း စသည့္အခ်က         ္မ်ားကို ထည့္သြင္းေဆြးေႏြးခဲ့သည္ဟု သတင္းထုတ္ျပန         ္ခ်က္အရ သိရသည္။     ေနျပည္ေတာ္ရွိ ျပန္ၾကားေရး၀န္ႀကီးဌာန အစည္းအေ၀းခန္းမ၌         ျပဳလုပ္ခဲ့ျခင္းျဖစ္ၿပီး ျပည္ေထာင္စု၀န္ႀကီး ေဒါက္တာေဖျမ         င့္၊ ေဒါက္တာမ်ဳိးသိမ္းႀကီး၊ ေဒါက္တာျမင့္ေထြးႏွင့္         ေဒါက္တာ၀င္းျမတ္ေအးတို႔ onal Challenge အေပၚ ထည့္သြင         ္းေရးဆြဲသြားရန္ လိုအပ္သည္ကို မွာၾကားထား</string>
    <string name="text_explore">Explore</string>
    <string name="text_all_guides">All Guides</string>
    <string name="text_add">Add</string>
    <string name="text_activity">Activity</string>
    <string name="text_profile">Profile</string>
    <string name="search">Search</string>
</resources>
